--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <div id="root">
-      <h1>Hello world!</h1>
-    </div>
-    <script src="index.js" type="module"></script>
-  </body>
+      <h1>DECIFRANDO OS MISTERIOS COM SCOOBY</h1>
+      <p>Se divirta criando mensagens codificadas e decifrando mensagens <br> para encontrar as pistas e desvendar os mistérios!</p>
+      <div id="root">
+          
 </html>
+
