--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
   <center>
     <div>
       <h1>DECIFRANDO OS MISTÉRIOS</h1>
-      <p>Se divirta criando mensagens codificadas e decifrando mensagens <br> para encontrar as pistas e desvendar os
-        mistérios!</p>
+      <h2>Se divirta criando mensagens codificadas e decifrando mensagens <br> para encontrar as pistas e desvendar os
+        mistérios!</h2>
     </div>
     <main class="main">
       <form class="form">
       <textarea class="textarea" id="mensagem" placeholder="Insira sua mensagem"></textarea>
-      <input class="input" type="number" min="0" max="100" placeholder="Insira o deslocamento" id="chave" />
+      <input class="input" type="number" min="0" max="100" placeholder="Insira o valor do deslocamento" id="chave" />
       <div>
         <button id="botaocifrar" class="btn">Cifrar</button>
         <button id="botaodecifrar" class="btn">Decifrar</button>
@@ -28,10 +28,10 @@
         </form>
     </main>
     <section class="comousar">
-      <p>
+      <div>
         <span class="bold">Como brincar:</span><br />
-        formulas matematicas para descobrir a chave.<br />
-      </p>
+        <p>formulas matematicas para descobrir a chave.<br /></p>
+      </div>
     </section>
 
     <footer>
