--- a/src/index.html
+++ b/src/index.html
@@ -16,27 +16,30 @@
     </div>
     <main class="main">
       <form class="form">
-      <textarea class="textarea" id="mensagem" placeholder="Insira sua mensagem"></textarea>
-      <input class="input" type="number" min="0" max="100" placeholder="Insira o valor do deslocamento" id="chave" />
-      <div>
-        <button id="botaocifrar" class="btn">Cifrar</button>
-        <button id="botaodecifrar" class="btn">Decifrar</button>
-        <button id="botaoresetar" class="btn">Resetar</button>
-      </div>
-      <textarea id="resultadofinal" class="textarea" disabled>
+        <textarea class="textarea" id="mensagem" placeholder="Insira sua mensagem aqui"></textarea>
+        <input class="input" type="number" min="0" max="100" placeholder="Insira o valor do deslocamento" id="chave" />
+        <div>
+          <button id="botaocifrar" class="btn">Cifrar</button>
+          <button id="botaodecifrar" class="btn">Decifrar</button>
+          <button id="botaoresetar" class="btn">Resetar</button>
+        </div>
+        <textarea id="resultadofinal" class="textarea" disabled>
           </textarea>
-        </form>
+      </form>
     </main>
     <section class="comousar">
       <div>
-        <span class="bold">Como brincar:</span><br />
-        <p>formulas matematicas para descobrir a chave.<br /></p>
+       <h3>PASSO A PASSO DE COMO BRINCAR</h3>
+        <p>1 - Use a sua criatividade para esconder as pistas e criar questões matemáticas para o jogador descobrir a chave de deslocamento da mensagem; <br>
+          2 - Insira a mensagem com a pista a ser cifrada no campo "INSIRA SUA MENSAGEM AQUI" e clique no botão CIFRAR. Clique em RESETAR para não deixar pistas;<br>
+          3 - Para o jogador descobrir cada pista, basta inserir a mensagem cifrada no campo "INSIRA SUA MENSAGEM AQUI" e cilcar no notão DECIFRAR.</p>
       </div>
     </section>
 
     <footer>
       Projeto desenvolvido por Andressa Oliveira
     </footer>
+
   </center>
 
   <script src="index.js" type="module"></script>
